week3/day18/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sda-training-service
  namespace: sda-training
  labels:
    app: sda-training
    component: app
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: sda-training
    component: app
